add the base stratcure of a blog with 3 pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
-:root {
+@import 'bootstrap';
+
+
+
+
+
+
+body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -12,5 +19,3 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-@import 'bootstrap';
